@@ -1,3 +1,7 @@
+2010-10-21  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* Yseasstat: bug fix for datasets with time constant fields [report: Ute Merkel]
+	
 2010-10-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* added docu for operator dv2ps
